--- a/requirements.txt
+++ b/requirements.txt
@@ -1,77 +1,22 @@
-altgraph==0.10.2
-asn1crypto==0.24.0
+app-settings==1.3
 atomicwrites==1.4.0
 attrs==19.3.0
-backports.functools-lru-cache==1.6.1
-bdist-mpkg==0.5.0
-bonjour-py==0.3
-cffi==1.12.2
-configparser==4.0.2
-contextlib2==0.6.0.post1
-cryptography==2.6.1
-enum34==1.1.6
-funcsigs==1.0.2
-future==0.17.1
-importlib-metadata==1.7.0
-ipaddress==1.0.22
-macholib==1.5.1
-matplotlib==1.3.1
-modulegraph==0.10.4
-more-itertools==5.0.0
-numpy==1.8.0rc1
-packaging==20.4
-pathlib2==2.3.5
+certifi==2020.6.20
+chardet==3.0.4
+colorama==0.4.3
+configparser==5.0.0
+crayons==0.3.1
+future==0.18.2
+idna==2.10
+more-itertools==8.4.0
 pluggy==0.13.1
 py==1.9.0
-py2app==0.7.3
-pycparser==2.19
-pyobjc-core==2.5.1
-pyobjc-framework-Accounts==2.5.1
-pyobjc-framework-AddressBook==2.5.1
-pyobjc-framework-AppleScriptKit==2.5.1
-pyobjc-framework-AppleScriptObjC==2.5.1
-pyobjc-framework-Automator==2.5.1
-pyobjc-framework-CFNetwork==2.5.1
-pyobjc-framework-Cocoa==2.5.1
-pyobjc-framework-Collaboration==2.5.1
-pyobjc-framework-CoreData==2.5.1
-pyobjc-framework-CoreLocation==2.5.1
-pyobjc-framework-CoreText==2.5.1
-pyobjc-framework-DictionaryServices==2.5.1
-pyobjc-framework-EventKit==2.5.1
-pyobjc-framework-ExceptionHandling==2.5.1
-pyobjc-framework-FSEvents==2.5.1
-pyobjc-framework-InputMethodKit==2.5.1
-pyobjc-framework-InstallerPlugins==2.5.1
-pyobjc-framework-InstantMessage==2.5.1
-pyobjc-framework-LatentSemanticMapping==2.5.1
-pyobjc-framework-LaunchServices==2.5.1
-pyobjc-framework-Message==2.5.1
-pyobjc-framework-OpenDirectory==2.5.1
-pyobjc-framework-PreferencePanes==2.5.1
-pyobjc-framework-PubSub==2.5.1
-pyobjc-framework-QTKit==2.5.1
-pyobjc-framework-Quartz==2.5.1
-pyobjc-framework-ScreenSaver==2.5.1
-pyobjc-framework-ScriptingBridge==2.5.1
-pyobjc-framework-SearchKit==2.5.1
-pyobjc-framework-ServiceManagement==2.5.1
-pyobjc-framework-Social==2.5.1
-pyobjc-framework-SyncServices==2.5.1
-pyobjc-framework-SystemConfiguration==2.5.1
-pyobjc-framework-WebKit==2.5.1
-pyOpenSSL==19.0.0
-pyparsing==2.4.7
-pytest==4.6.11
-pytest-rerunfailures==7.0
-python-dateutil==1.5
-pytz==2013.7
-scandir==1.10.0
-scipy==0.13.0b1
+pytest==4.3.1
+pytest-testrail==2.8.3
+PyYAML==5.3.1
+requests==2.24.0
+selene==2.0.0a28
 selenium==3.141.0
-six==1.12.0
+six==1.15.0
 urllib3==1.25.9
-vboxapi==1.0
-wcwidth==0.2.5
-xattr==0.6.4
-zipp==1.2.0
+webdriver-manager==3.2.1
